# FFTRR_poisson

./: .readthedocs.yaml  README.md  __init__.py  example.ipynb  pyproject.toml
.github/workflows/: publish.yml
docs/: api_reference.rst  conf.py  fftrr_poisson.rst  index.rst  modules.rst  requirements.txt
docs/_build/html/: .buildinfo  fftrr_poisson.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  fftrr_poisson.doctree  index.doctree  modules.doctree
examples/: example.ipynb
fftrr_poisson/: __init__.py  compute_C_D_nonuniform.py  compute_C_D_uniform.py  compute_fourier_coeff_unif.py  generate_cartesian_grid_on_disk.py  generate_grid_values.py  generate_nonuniform_radial.py  nonuniform_simps_rule.py  plot_on_disk.py  plot_on_disk_with_error.py  poisson_solver.py  trap_2d_on_disk.py
fftrr_poisson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
linear_poisson_solver copy/poisson_solver/: example.ipynb  readme.txt
linear_poisson_solver copy/poisson_solver/solver_functions/: compute_C_D_nonuniform.py  compute_fourier_coeff_unif.py  generate_cartesian_grid_on_disk.py  generate_nonuniform_radial.py  nonuniform_simps_rule.py  plot_on_disk_with_error.py
